# fortuna-debugger

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  Makefile  README.md  TODO.md  defs.mk  test.cc
.old/sample-chip8/: emulation.c  microcontroller.c
.old/src/: emulation.c  emulation.h  machine.h
.old/src/fdbg/debugger/: config.cc
.old/src/fdbg/debugger/emulator/: emulator.cc  emulator.hh
.old/src/fdbg/debugger/exceptions/: exceptions.hh
.old/src/fdbg/debugger/windows/: demo.cc  messagebox.cc  startup.hh  window.hh
.old/src/fdbg/libfdbg/: client.hh  exceptions.hh
.old/src/fdbg/microcontroller/: generate_nanopb.sh  to-computer.pb.h  to-debugger.pb.c  to-debugger.pb.h
.old/src/fdbg/protobuf/: to-computer.proto  to-debugger.proto
.tmp/: _machine.h
debugger/: load.cc  load.hh  model.cc  model.hh  ui.cc  ui.hh
debugger/emulator/: emulator.cc  emulator.hh
debugger/windows/: memory.cc  memory.hh  messagebox.cc  startup.cc  startup.hh  window.hh
microcontroller/: FILELIST  main.c  to-debugger.pb.h
mk/: defs.mk
sample-chip8/: .gitignore  CMakeLists.txt  Makefile  compiler.c  compiler.h  compiler.lua  emulation.h  emulator.c  emulator.h  fdbg  lua  machine.c  machine.h  microcontroller.c  microcontroller.h  sample-chip8.lua
sample-chip8/.old/: compiler.c  compiler.lua  compiler_lua.h  machine.h  microcontroller.h
sample-chip8/pico-pi/: README.md
sample-chip8/pico-pi/firmware/: CMakeLists.txt  FILELIST  contrib
sample-chip8/pico-pi/firmware/src/: contrib  emulator.c  emulator.h  library  machine.c  machine.h  microcontroller  microcontroller.c  microcontroller.h
sample-chip8/rom/: MAZE.SRC
sample-emulator/: Makefile  emulator.c  sample-emulator.lua
sample-emulator/rom/: echo.asm
scripts/: findserial.py
src/: CMakeLists.txt  emulation.h  machine.c  machine.h  microcontroller.c  microcontroller.h
src/debugger/: .gitignore  GNUmakefile  Makefile  load.cc  load.hh  main.cc  model.cc  model.hh  ui.cc  ui.hh
src/debugger/config/: config.cc  config.hh
src/debugger/emulator/: emulator.cc  emulator.hh
src/debugger/filewatcher/: filewatcher.cc  filewatcher.hh
src/debugger/model/: debuginfo.cc  debuginfo.hh  model.cc  model.hh  terminalmodel.cc  terminalmodel.hh
src/debugger/ui/: keypress.cc  keypress.hh  properties.cc  properties.hh  ui.cc  ui.hh
src/debugger/windows/: code.cc  code.hh  configuration.cc  configuration.hh  cycles.cc  cycles.hh  debugtext.cc  debugtext.hh  interrupt.cc  interrupt.hh  keypress.cc  keypress.hh  mainmenu.cc  mainmenu.hh  memory.cc  memory.hh  registers.cc  registers.hh  startup.cc  startup.hh  terminal.cc  terminal.hh  uploadrom.cc  uploadrom.hh  window.cc  window.hh
src/fdbg/debugger/: config.hh  main.cc  ui.cc  ui.hh
src/fdbg/debugger/emulator/: emulator.cc
src/fdbg/debugger/windows/: demo.hh  messagebox.hh  startup.cc  startup.hh  window.hh
src/fdbg/emulator/: emulator_cb.h  main.cc
src/fdbg/libfdbg/: client.cc  client.hh  connection.cc  connection.hh  exceptions.hh  fdbg.hh  serial.cc  serial.hh  serial.inl  server.cc  server.hh
src/fdbg/microcontroller/: main.c  to-computer.pb.c
src/fdbg/protobuf/: request.proto  response.proto  to-computer.proto  to-debugger.proto
src/fdbg/scripts/: findserial.py
src/microcontroller/: FILELIST  generate_nanopb.sh  main.c  to-computer.pb.c  to-computer.pb.h  to-debugger.pb.c  to-debugger.pb.h
src/scripts/: findserial.py  libfdbg-server.pc
user/: compiler.h  emulator.c  machine.h  microcontroller.h
user-sample/pico-pi/firmware/: CMakeLists.txt  user
user/pico-pi/firmware/: CMakeLists.txt  microcontroller
user/pico-pi/firmware/src/: microcontroller.c
